--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,10 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "queue": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "print": "cpp"
     }
 }
